  chroot jails where access to ptys is locked out. AIS code now
  interprets message type 6 and 8 application IDs correctly as a
  Designated Area Code and Functional ID pair. gpspipe has a new -T
  option for setting the timestamp format.  xgpsspeed is completely
  rewritten in Python, eliminating some dependencies on ancient X
  libraries.  We now ship a Qt binding for the client library. Note
  a GCC 4.2.1 optimizer bug.

* Tue Apr 20 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.94
  Error-checking in the 50bps subframe code has been greatly improved.
  The Garmin GPS driver can now use libusb, if it is present, to do
  device discovery. The libgps library has been split apart; the
  service functions used by the daemon now live in libgpsd. This
  will shave some code volume from GPSD client applications.  A packaging
  error that resulted in xgps not being shipped in 2.93 has been
  corrected. We now have stronger checking for valid ephemeris before
  extracting the leap-second offset; they should prevent many cases
  where gpsd might previously have used an invalid leap-second offset.

* Fri Apr 16 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.93
  Support for JSON dumping and parsing of AIS message types 25 and 26,
  not yet observed in the wild on AISHub. Fix Debian bug #569703.  by
  removing non-streaming mode from the Python exerciser. Fix Debian
  bug #572900 by unsetting the appropriate in-use flag in the device
  array.  Change the libgps default from old protocol to JSON. Add a
  close() method to the C++ binding. Try to recover better from
  sporadic cases of false matches to Trimble packet format from a SiRF
  binary datastream. gps_poll() now returns -1 with errno not set when
  the gpsd socket closes. TPV now refrains from reporting fields the
  fix quality won't support. gpsmon option for listing device types is
  now -L to -l can be used to enable logging (to stay consistent with